# fuzzy_types

./: .bumpversion.cfg  .travis.yml  CHANGELOG.rst  README.md  setup.cfg  tasks.py
.github/workflows/: pythonapp.yml  sphinxbuild.yml
docs/sphinx/: api.rst  conf.py  index.rst  intro.rst
fuzzy_types/: __init__.py  configuration.py  fuzzy.py  orig_structs.py  utils.py
fuzzy_types/etc/: fuzzy.yml
fuzzy_utils/: __init__.py  fuzzy.py  utils.py
tests/: __init__.py  conftest.py  test_fuzzydict.py  test_fuzzylist.py  test_fuzzystr.py
