[metadata]
name = fuzzy-types
version = 0.1.0-alpha
author = Brian Cherinka
author_email = havok2063@gmail.com
description = fuzzywuzzy-based utilities and data structures
url = https://github.com/havok2063/fuzzy_types
project_urls = 
	Repository = https://github.com/havok2063/fuzzy_types
	Documentation = https://fuzzy-types.readthedocs.org
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers = 
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Documentation :: Sphinx
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
install_requires = 
	fuzzywuzzy[speedup]>=0.18.0
	pyyaml>=5.3

[options.package_data]
fuzzy_types = 
	etc/*

[options.extras_require]
dev = 
	%(docs)s # This forces the docs extras to install (http://bit.ly/2Qz7fzb)
	ipython>=7.9.0
	matplotlib>=3.1.1
	flake8>=3.7.9
	doc8>=0.8.0
	pytest>=5.2.2
	pytest-cov>=2.8.1
	pytest-sugar>=0.9.2
	isort>=4.3.21
	codecov>=2.0.15
	coverage[toml]>=5.0
	ipdb>=0.12.3
	twine>=3.1.1
	wheel>=0.33.6
docs = 
	Sphinx>=2.1.0
	sphinx_bootstrap_theme>=0.4.12
	releases>=1.6.3

[isort]
line_length = 100
sections = 
	FUTURE
	STDLIB
	THIRDPARTY
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = fuzzy_types
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore = 
	H101
	E722
	W504
	W505
per-file-ignores = 
	*/__init__.py:E,W
max-line-length = 99

[tool:pytest]
addopts = --cov fuzzy_types --cov-report html -W ignore

[coverage:run]
branch = true
include = 
	fuzzy_types/*
omit = 
	*/__init__.py

[coverage:report]
exclude_lines = 
